--- a/Yume/Yume.vcxproj.filters
+++ b/Yume/Yume.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="src\Yume\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Yume\Core.h">
+    <ClInclude Include="src\Yume\API.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Yume.h">
@@ -27,9 +27,15 @@
     <ClInclude Include="src\Yume\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Yume\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Yume\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Yume\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
